config/objects/Load__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Carrier_Tender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accepted Carrier Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accepted_Customer_Tender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accepted Customer Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Loads (Accepted Customer Tender)</relationshipLabel>
        <relationshipName>Loads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Profit__c</fullName>
        <formula>if(and(not(isnull(Carrier_Total__c)),not(isnull(Customer_Total__c))),Customer_Total__c - Carrier_Total__c,null)</formula>
        <label>Booked Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COD_Handlings__c</fullName>
        <label>COD Handlings</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Hours_Notice__c</fullName>
        <label>Cancellation Hours Notice</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier_Booked_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Booked Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Loads (Carrier Booked Quote)</relationshipLabel>
        <relationshipName>Carrier_Booked_Quote_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Total__c</fullName>
        <label>Carrier Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <formula>Accepted_Carrier_Tender__r.Quote__r.Carrier__r.Name</formula>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Owner__c</fullName>
        <formula>Tender__r.Owner__c</formula>
        <label>Commission Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consolidation_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidation Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidation_Type__c</fullName>
        <formula>if (and(Consolidation_Allowed__c = true,Remaining_Capacity__c &gt; 0.25), &apos;PARTIAL&apos;,&apos;FULL&apos;)</formula>
        <label>Consolidation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Booked_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Booked Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Loads (Customer Booked Quote)</relationshipLabel>
        <relationshipName>Customer_Booked_Quote_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Total__c</fullName>
        <label>Customer Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loads (Customer)</relationshipLabel>
        <relationshipName>Customer_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detention__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Detention</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated - Protect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated - Chill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated - Frozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ExtraStops__c</fullName>
        <label>Extra Stops</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feet__c</fullName>
        <formula>(( round(PalletSpots__c / 2 , 0) ) + mod( PalletSpots__c ,2 )) * 4</formula>
        <label>Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Pick_Date__c</fullName>
        <label>First Pick Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Pick_Pod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Pick Pod</label>
        <referenceTo>Pod__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Pick_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Pick State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Pick_Zip_Five__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Pick Zip Five</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Pick_Zip_Three__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Pick Zip Three</label>
        <referenceTo>ZipThree__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Pick__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Pick</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>First_Pick_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Index__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fuel Index</label>
        <referenceTo>Fuel__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Region__c</fullName>
        <label>Fuel Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Pct__c</fullName>
        <formula>if(not(isnull(Gross_Profit__c)),Gross_Profit__c/Revenue__c,null)</formula>
        <label>Gross Profit Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>if(and(not(isnull(Cost__c)),not(isnull(Revenue__c))),Revenue__c - Cost__c,null)</formula>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intermodal_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermodal Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Truckstop_ID__c</fullName>
        <externalId>true</externalId>
        <label>Internet Truckstop ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partial__c</fullName>
        <formula>if ( and(Consolidation_Allowed__c, Remaining_Capacity__c &gt; 0.25),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Is_Partial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Posted_To_Internet_Truckstop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Posted To Internet Truckstop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Drop_Date__c</fullName>
        <label>Last Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Drop_Pod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Drop Pod</label>
        <referenceTo>Pod__c</referenceTo>
        <relationshipLabel>Loads (Last Drop Pod)</relationshipLabel>
        <relationshipName>Loads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Drop_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Drop State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Loads (Last Drop State)</relationshipLabel>
        <relationshipName>Loads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Drop_Zip_Five__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Drop Zip Five</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipLabel>Loads (Last Drop Zip Five)</relationshipLabel>
        <relationshipName>Loads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Drop_Zip_Three__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Drop Zip Three</label>
        <referenceTo>ZipThree__c</referenceTo>
        <relationshipLabel>Loads (Last Drop Zip Three)</relationshipLabel>
        <relationshipName>Loads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Drop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Drop</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Loads (Last Drop)</relationshipLabel>
        <relationshipName>Last_Drop_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Layover_Days__c</fullName>
        <label>Layover Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liftgate_Stops__c</fullName>
        <label>Liftgate Stops</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lumper_Charges__c</fullName>
        <label>Lumper Charges</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Temp__c</fullName>
        <label>Maximum Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Miles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Temp__c</fullName>
        <label>Minimum Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offers__c</fullName>
        <label>Offers</label>
        <summaryForeignKey>Offer__c.Load__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Tender__r.Owner__r.FirstName &amp; &quot; &quot; &amp;  Tender__r.Owner__r.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Tender__r.Owner__c</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PalletSpots__c</fullName>
        <label>Pallet Spots</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallets__c</fullName>
        <label>Pallets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pieces__c</fullName>
        <label>Pieces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Per_Gallon__c</fullName>
        <formula>Fuel_Index__r.Price_Per_Gallon__c</formula>
        <label>Price Per Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reconsignments__c</fullName>
        <label>Reconsignments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redelivery_Attempts__c</fullName>
        <label>Redelivery Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refrigeration_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refrigeration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Capacity__c</fullName>
        <label>Remaining Capacity</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Schedule</label>
        <referenceTo>Sales_Tax_Schedule__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipments__c</fullName>
        <label>Shipments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stops__c</fullName>
        <label>Stops</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Service_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Service Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Loads</relationshipLabel>
        <relationshipName>Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>if(and(not(isnull(Minimum_Temp__c)),not(isnull(Maximum_Temp__c))),text(Minimum_Temp__c)&amp; &quot;°&quot; &amp; &quot; to &quot; &amp; text(Maximum_Temp__c)&amp; &quot;°&quot;,&quot;&quot;) &amp; 
if(and(not(isnull(Minimum_Temp__c)),isnull(Maximum_Temp__c)),&quot;Above &quot; &amp; text(Minimum_Temp__c)&amp; &quot;°&quot;,&quot;&quot;) &amp; 
if(and(not(isnull(Maximum_Temp__c)),isnull(Minimum_Temp__c)),&quot;Below &quot; &amp; text(Maximum_Temp__c) &amp; &quot;°&quot;,&quot;&quot;) &amp; 
if(and(isnull(Minimum_Temp__c),isnull(Maximum_Temp__c)),&quot;&quot;,&quot;&quot;)</formula>
        <label>Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Company_Id__c</fullName>
        <formula>Tender__r.Company__c</formula>
        <label>Tender Company Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Company_Name__c</fullName>
        <formula>Tender__r.Company__r.Name</formula>
        <label>Tender Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Response__c</fullName>
        <formula>text(Tender__r.Response__c)</formula>
        <label>Tender Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Total_Formula__c</fullName>
        <formula>Tender__r.Total__c</formula>
        <label>Tender Total Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tender_Total__c</fullName>
        <label>Tender Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Loads (Tender)</relationshipLabel>
        <relationshipName>Loads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Load</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delivered__c</columns>
        <columns>Type__c</columns>
        <columns>First_Pick_Pod__c</columns>
        <columns>Last_Drop_Pod__c</columns>
        <columns>First_Pick_Date__c</columns>
        <columns>Last_Drop_Date__c</columns>
        <columns>Miles__c</columns>
        <columns>Booked_Profit__c</columns>
        <columns>Carrier_Total__c</columns>
        <columns>Carrier__c</columns>
        <columns>Stops__c</columns>
        <columns>Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CARRIER_LOADS</fullName>
        <columns>NAME</columns>
        <columns>Delivered__c</columns>
        <columns>Tender_Company_Name__c</columns>
        <columns>Tender_Response__c</columns>
        <columns>First_Pick_Date__c</columns>
        <columns>First_Pick_Pod__c</columns>
        <columns>Last_Drop_Date__c</columns>
        <columns>Last_Drop_Pod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filters>
        <label>CARRIER LOADS</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>